Added login functionality to new frontend
